# api/bundled/openapi.json
@@ -94,45 +94,6 @@
         }
       }
     },
-    "/document/ws/documents/{documentId}": {
-      "get": {
-        "security": [
-          {
-            "document_Oauth2": []
-          }
-        ],
-        "tags": [
-          "Document"
-        ],
-        "summary": "WebSocket hocuspocus",
-        "operationId": "wsDocument",
-        "parameters": [
-          {
-            "$ref": "#/components/parameters/document_documentIdPath"
-          }
-        ],
-        "responses": {
-          "101": {
-            "description": "Switching Protocols - WebSocket connection established"
-          },
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "$ref": "#/components/responses/document_BadRequestError"
-          },
-          "401": {
-            "$ref": "#/components/responses/document_UnauthorizedError"
-          },
-          "404": {
-            "$ref": "#/components/responses/document_NotFoundError"
-          },
-          "500": {
-            "$ref": "#/components/responses/document_InternalServerError"
-          }
-        }
-      }
-    },
     "/document/documents/{documentId}/attachment-url": {
       "get": {
         "security": [
